--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -80,7 +80,7 @@
 						<td width="15%">@item.dateOccured</td>
 						<td width="20%">
 							<!-- Edit button -->
-							<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=@item.disasterID">
+							<a class="btn btn-success edit-button" href="/Disaster/Edit?disasterID=@item.disasterID">
 								<i class="bi bi-pencil-fill"></i>
 							</a>
 							
@@ -165,7 +165,7 @@
 											<td width="15%">${result.dateOccured}</td>
 											<td width="20%">
 												<!-- Edit button -->
-												<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=${result.disasterID}">
+												<a class="btn btn-success edit-button" href="/Disaster/Edit?disasterID=${result.disasterID}">
 													<i class="bi bi-pencil-fill"></i>
 												</a>
 
