Moved to folders

--- a/Pages/UserManagement/Admin/Add.cshtml
+++ b/Pages/UserManagement/Admin/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.Admin.AddModel
 @{
-    ViewData["Title"] = "Add Admin";
+    ViewData["Title"] = "Add User - Admin";
 }
 
 @if (!string.IsNullOrEmpty(Model.errorMessage))
@@ -16,7 +16,7 @@
     <div class="container mt-4 form-container-content">
         <div class="row">
             <div class="col text-center">
-                <h1>Add New User</h1>
+                <h1>Add User</h1>
                 <h6 class="text-dark">Admin</h6>
             </div>
         </div>
