--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -36,7 +36,7 @@
 
         <div class="col-auto">
             <div class="d-flex justify-content-end align-items-center">
-                <a asp-page="/UserManagement/AddUser" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i>Add User</a>
+                <a asp-page="/UserManagement/Add" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i>Add User</a>
             </div>
         </div>
     </div>
@@ -245,7 +245,7 @@
 
     confirmDeleteButton.addEventListener('click', function () {
         if (userIdToDelete !== null) {
-            window.location.href = "/UserManagement/DeleteUser?userID=" + userIdToDelete;
+            window.location.href = "/UserManagement/Delete?userID=" + userIdToDelete;
         }
     });
 </script>
