--- a/Pages/EvacuationCenter/Edit.cshtml
+++ b/Pages/EvacuationCenter/Edit.cshtml
@@ -237,7 +237,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="saveChangesButton">Save Changes</button>
+				<button type="button" class="btn btn-primary" id="saveChangesButton">Save Changes</button>
 			</div>
 		</div>
 	</div>
