--- a/Pages/Shared/_DisasterProfile.cshtml
+++ b/Pages/Shared/_DisasterProfile.cshtml
@@ -35,12 +35,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/EvacuationCenter/Index">Evacuation Center</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Database</a>
                             <ul class="dropdown-menu" data-bs-theme="light">
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/Family/Index">Family Database</a></li>
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ECStaffDatabase/Index">EC Staff Database</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/Family/Index">Family</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ECStaff/Index">EC Staff</a></li>
                             </ul>
+                        </li -->
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/Family/Index">Family</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/ECStaff/Index">EC Staff</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
