View Family Profile

--- a/Pages/Family/Family Profile/ViewFamilyProfile.cshtml
+++ b/Pages/Family/Family Profile/ViewFamilyProfile.cshtml
@@ -76,6 +76,15 @@
 					</div>
 				</div>
 
+
+				<div class="row mt-5">
+					<h6 class="text-dark">Family Head:</h6>
+				</div>
+
+
+				<div class="row mt-5">
+					<h6 class="text-dark">Family Member/s:</h6>
+				</div>
 				@*<div class="row mt-3">
 				<div class="col text-center">
 				<!-- Use the d-flex and flex-column classes for vertical stacking on smaller screens -->
