--- a/Pages/Shared/_DisasterProfile.cshtml
+++ b/Pages/Shared/_DisasterProfile.cshtml
@@ -69,19 +69,19 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/EntryLog">Entry Log</a>
+                            <a class="nav-link" asp-area="" asp-page="/Disaster/EntryLog">Entry Log</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/StaffAssignment">Staff Assignment</a>
+                            <a class="nav-link" asp-area="" asp-page="/Disaster/StaffAssignment">Staff Assignment</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/ReliefGoodsPack">Relief Goods Pack</a>
+                            <a class="nav-link" asp-area="" asp-page="/Disaster/ReliefGoodsPack">Relief Goods Pack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/ReliefDistribution">Relief Distribution</a>
+                            <a class="nav-link" asp-area="" asp-page="/Disaster/Distribution">Distribution</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/VulnerabilityAssessments">Vulnerability Assessments</a>
+                            <a class="nav-link" asp-area="" asp-page="/Disaster/VulnerabilityAssessments">Vulnerability Assessments</a>
                         </li>
                     </ul>
                 </div>
@@ -97,11 +97,11 @@
             <!-- Sidebar (mobile) -->
             <div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
                 <select class="form-select">
-                    <option value="/Disaster/Profile/EntryLog">Entry Log</option>
-                    <option value="/Disaster/Profile/StaffAssignment">Staff Assignment</option>
-                    <option value="/Disaster/Profile/ReliefGoodsPack">Relief Goods Pack</option>
-                    <option value="/Disaster/Profile/ReliefDistribution">Relief Distribution</option>
-                    <option value="/Disaster/Profile/VulnerabilityAssessments">Vulnerability Assessments</option>
+                    <option value="/Disaster/EntryLog">Entry Log</option>
+                    <option value="/Disaster/StaffAssignment">Staff Assignment</option>
+                    <option value="/Disaster/ReliefGoodsPack">Relief Goods Pack</option>
+                    <option value="/Disaster/Distribution">Distribution</option>
+                    <option value="/Disaster/VulnerabilityAssessments">Vulnerability Assessments</option>
                 </select>
             </div>
 
