--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -202,11 +202,11 @@
 
 	function applyFilter(filterId) {
 		const filterBox = document.getElementById(filterId);
-		const selectedValues = Array.from(filterBox.querySelectorAll('input[name="barangayFilterValue"]:checked')).map(input => input.value);
+		const selectedValues = Array.from(filterBox.querySelectorAll('input:checked')).map(input => input.value);
 
 		const tableRows = document.querySelectorAll('tbody tr');
 		tableRows.forEach(row => {
-			const barangayValue = row.querySelector('td:nth-child(4)').textContent.trim();
+			const barangayValue = row.querySelector('td:nth-child(3)').textContent.trim();
 
 			if (selectedValues.length === 0 || selectedValues.includes(barangayValue)) {
 				row.style.display = 'table-row';
