Added floating alert

--- a/Pages/Disaster/Delete.cshtml
+++ b/Pages/Disaster/Delete.cshtml
@@ -54,5 +54,5 @@
     }
 
     // Redirect to the Disaster/Index page after deleting or encountering an error
-    Response.Redirect("/Disaster/Index?errorMessage=" + errorMessage + "&successMessage=" + successMessage);
+    Response.Redirect("/disaster/index?errorMessage=" + errorMessage + "&successMessage=" + successMessage);
 }
