--- a/Pages/Disaster/Add.cshtml
+++ b/Pages/Disaster/Add.cshtml
@@ -82,7 +82,7 @@
 
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/Disaster/Index" role="button">Cancel</a>
+					<a class="btn btn-outline-secondary mr-10" href="/disaster/index" role="button">Cancel</a>
 					<button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
 				</div>
 			</form>
