--- a/Pages/Disaster/Edit.cshtml
+++ b/Pages/Disaster/Edit.cshtml
@@ -85,7 +85,7 @@
 
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/Disaster/Index" role="button">Cancel</a>
+					<a class="btn btn-outline-secondary mr-10" href="/disaster/index" role="button">Cancel</a>
 					<button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
 				</div>
 			</form>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="saveChangesButton">Save Changes</button>
+				<button type="button" class="btn btn-primary" id="saveChangesButton">Save Changes</button>
 			</div>
 		</div>
 	</div>
