--- a/Pages/Shared/_DisasterProfile.cshtml
+++ b/Pages/Shared/_DisasterProfile.cshtml
@@ -18,7 +18,7 @@
     <div id="top-nav">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary shadow-lg mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                <a class="navbar-brand" asp-area="" asp-page="/index">
                     <img src="/white-logo-horizontal.png" alt="" height="30" id="logo" style="margin-left: 15px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,39 +27,36 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav" style="padding: 5px 10px 10px 0;">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Dashboard</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/index">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Disaster/Index">Disaster</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/disaster/index">Disaster</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/EvacuationCenter/Index">Evacuation Center</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/evacuationcenter/index">Evacuation Center</a>
                         </li>
                         <!-- li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Database</a>
                             <ul class="dropdown-menu" data-bs-theme="light">
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/Family/Index">Family</a></li>
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ECStaff/Index">EC Staff</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/family/index">Family</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ecstaff/index">EC Staff</a></li>
                             </ul>
                         </li -->
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Family/Index">Family</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/family/index">Family</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/ECStaff/Index">EC Staff</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/ecstaff/index">EC Staff</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/inventory/index">Inventory</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/UserManagement/Index">Users</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/usermanagement/index">Users</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="profile">
-                                <img src="~/sample-pic.jpg" alt="User Profile">
+                                <img src="~/sample-pic.jpg" alt="User profile">
                             </a>
                         </li>
                     </ul>
@@ -75,19 +72,19 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/EntryLog">Entry Log</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/entrylog">Entry Log</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/StaffAssignment">Staff Assignment</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/staffassignment">Staff Assignment</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/ReliefGoodsPack">Relief Goods Pack</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/reliefgoodspack">Relief Goods Pack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/ReliefDistribution">Relief Distribution</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/reliefdistribution">Relief Distribution</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Disaster/Profile/VulnerabilityAssessments">Vulnerability Assessments</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/vulnerabilityassessments">Vulnerability Assessments</a>
                         </li>
                     </ul>
                 </div>
@@ -103,11 +100,11 @@
             <!-- Sidebar (mobile) -->
             <div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
                 <select class="form-select">
-                    <option value="/Disaster/Profile/EntryLog">Entry Log</option>
-                    <option value="/Disaster/Profile/StaffAssignment">Staff Assignment</option>
-                    <option value="/Disaster/Profile/ReliefGoodsPack">Relief Goods Pack</option>
-                    <option value="/Disaster/Profile/ReliefDistribution">Relief Distribution</option>
-                    <option value="/Disaster/Profile/VulnerabilityAssessments">Vulnerability Assessments</option>
+                    <option value="/disaster/profile/entrylog">Entry Log</option>
+                    <option value="/disaster/profile/staffassignment">Staff Assignment</option>
+                    <option value="/disaster/profile/reliefgoodspack">Relief Goods Pack</option>
+                    <option value="/disaster/profile/reliefdistribution">Relief Distribution</option>
+                    <option value="/disaster/profile/vulnerabilityassessments">Vulnerability Assessments</option>
                 </select>
             </div>
 
