--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Agapay Aid System</title>
+    <title>@ViewData["Title"] - Agapay Aid</title>
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootswatch_Zephyr.css" />
@@ -19,7 +19,7 @@
     <div id="top-nav">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary shadow-lg mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                <a class="navbar-brand" asp-area="" asp-page="/index">
                     <img src="/white-logo-horizontal.png" alt="" height="30" id="logo" style="margin-left: 15px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,32 +28,32 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav" style="padding: 5px 10px 10px 0;">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Dashboard</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/index">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Disaster/Index">Disaster</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/disaster/index">Disaster</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/EvacuationCenter/Index">Evacuation Center</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/evacuationcenter/index">Evacuation Center</a>
                         </li>
                         <!-- li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Database</a>
                             <ul class="dropdown-menu" data-bs-theme="light">
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/Family/Index">Family</a></li>
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ECStaff/Index">EC Staff</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/family/index">Family</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ecstaff/index">EC Staff</a></li>
                             </ul>
                         </li -->
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Family/Index">Family</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/family/index">Family</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/ECStaff/Index">EC Staff</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/ecstaff/index">EC Staff</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/inventory/index">Inventory</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/UserManagement/Index">Users</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/usermanagement/index">Users</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="profile">
@@ -72,7 +72,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - AgapayAidSystem - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - AgapayAidSystem - <a asp-area="" asp-page="/privacy">Privacy</a>
         </div>
     </footer>
 
