--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -75,7 +75,7 @@
 
                     <!-- Cancel and Save Selection Button -->
                     <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/Disaster/Profile/Index?disasterID=@Model.disasterInfo.disasterID">Cancel</a>
+                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID">Cancel</a>
                         <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>Save Selection</button>
                     </div>
                 </div>
