--- a/Pages/Disaster/Profile/CheckInEvacuee.cshtml
+++ b/Pages/Disaster/Profile/CheckInEvacuee.cshtml
@@ -58,12 +58,11 @@
 
                     <!-- Cancel and Save Button -->
                     <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/CancelPage">Cancel</a>
+                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/entrylog">Cancel</a>
                         <button type="submit" class="btn btn-primary" name="saveSelection">Save Selection</button>
                     </div>
                 </div>
             </div>
         </form>
-
     </div>
 </div>
