--- a/Pages/Disaster/Profile/StaffAssignment.cshtml
+++ b/Pages/Disaster/Profile/StaffAssignment.cshtml
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="col-auto d-flex justify-content-between align-items-center">
-			<a class="btn btn-primary mb-2" href="/Disaster/AssignStaff">
+			<a class="btn btn-primary mb-2" href="/disaster/assignstaff">
 				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> AssignStaff
 			</a>
 		</div>
