--- a/Pages/EvacuationCenter/Add.cshtml
+++ b/Pages/EvacuationCenter/Add.cshtml
@@ -192,7 +192,7 @@
 
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/EvacuationCenter/Index" role="button">Cancel</a>
+					<a class="btn btn-outline-secondary mr-10" href="/evacuationcenter/index" role="button">Cancel</a>
 					<button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
 				</div>
 			</form>
