--- a/Pages/EvacuationCenter/Edit.cshtml
+++ b/Pages/EvacuationCenter/Edit.cshtml
@@ -216,7 +216,7 @@
 
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/EvacuationCenter/Index" role="button">Cancel</a>
+					<a class="btn btn-outline-secondary mr-10" href="/evacuationcenter/index" role="button">Cancel</a>
 					<button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
 				</div>
 			</form>
