--- a/Pages/UserManagement/Add.cshtml
+++ b/Pages/UserManagement/Add.cshtml
@@ -73,7 +73,7 @@
 
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/UserManagement/Index" role="button">Cancel</a>
+					<a class="btn btn-outline-secondary mr-10" href="/usermanagement/index" role="button">Cancel</a>
 					<button type="submit" class="btn btn-primary" id="submitBtn">
 						Next
 						<i class="bi bi-arrow-right" style="padding:5px"></i>
