--- a/Pages/UserManagement/LGUStaff/Edit.cshtml
+++ b/Pages/UserManagement/LGUStaff/Edit.cshtml
@@ -128,7 +128,7 @@
 
                 <!-- Cancel and Save Button -->
                 <div class="button-spacer">
-                    <a class="btn btn-outline-secondary mr-10" href="/UserManagement/Index" role="button">Cancel</a>
+                    <a class="btn btn-outline-secondary mr-10" href="/usermanagement/index" role="button">Cancel</a>
                     <button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
                 </div>
             </div>
